Added Data Analysis, Experiment Design and Software Development

--- a/template/uetke/templates/static_pages/scientific_software.html
+++ b/template/uetke/templates/static_pages/scientific_software.html
@@ -26,18 +26,117 @@
     </div>
   </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-lg-10">
-          <p class="lead text-justify"><a href="/">Uetke</a> specializes in the development of highly specific software for the lab.</p>
-
-          <p class="text-justify">Many laboratories face a bottleneck when software turns into a handicap instead of a tool for performing experiments. However, few Ph.D. and postdocs have the knowledge and the time to sit down and program the tools they need to automatize tasks or to develop a proper user interface for visualizing the experiment in real-time. Leveraging from Uetke's expertise, labs around the world can cut down development times and focus into the science questions they want to answer.</p>
-
-          <p class="text-justify">We work in <b>close collaboration with lab managers and with younger researchers</b>. In this way, we can fulfill the requests for the long-term view of the group and those that arise from the daily use of the software. We have built extensive experience working in collaboration with different labs. This allowed us to understand the needs at every step of the development plan, especially how to to lay out a development environment that will be sustainable in the long term. Our software is properly documented and designed in such a way that future users can expand its functionality
-    without complications.</p>
-
+    <div class="container mb-5">
+    <!-- Three Pillars -->
+      <div class="row justify-content-between my-4 pl-md-5 pr-md-5">
+        <div class="col-md-4 text-center">
+          <img src="{{ SITEURL }}/theme/img/group.svg" style="width: 75%"/>
+          <p class="lead mt-3">Usability</p>
+          <p class="text-justify">Our software aims at simplicity, both in the user interface and the code under it. Usability means that the programs
+we deliver can be used right away and that users can become developers by inspecting the code.</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="{{ SITEURL }}/theme/img/handshake.svg" style="width: 75%"/>
+          <p class="lead mt-3">Transparency</p>
+          <p class="text-justify">The programs we deliver are completely open-source, meaning that every step of the process can be checked by its
+users. We keep the code clean and clear for you to see what is happening when you acquire data.</p>
+        </div>
+        <div class="col-md-4 text-center">
+          <img src="{{ SITEURL }}/theme/img/line-chart.svg" style="width: 75%"/>
+          <p class="lead mt-3">Efficiency</p>
+          <p class="text-justify">One of the key aspects of our software is the efficiency. From the design phase to the development, we think how to
+minimize the delivery time and increase the throughput of your experiments.</p>
         </div>
       </div>
+    <!-- Instrumentation for a Proposal -->
+      <div class="row mt-md-4">
+        <div class="col-md-4"><img src="{{ SITEURL }}/theme/img/writing_software.jpg" style="width: 100%;"/> </div>
+        <div class="col-md-8"><p class="lead text-justify">Instrumentation for your proposals</p>
+            <p class="text-justify">If you are writing a proposal and you need help with the instrumentation section, we can assist you with the process. Don't let a good idea for an experiment be limited by the software you have available.</p>
+            <p class="text-justify">We can help you devise new ways of performing experiments and automating tasks. We can design protocols for data handling and storing.</p>
+            <p class="text-justify"><a href="/contact">Contact us</a> if you are unsure of what software can do for your research.</p>
+        </div>
+      </div>
+    <!-- The Agile Process -->
+      <div class="row py-3 mt-3 mb-3 bg-light">
+          <div class="col-12 text-center">
+              <h3>Agile Software Development</h3>
+          </div>
+          <div class="col-md-8">
+              <p class="text-justify">At Uetke we are committed to deliver solutions through an Agile process. We believe that the best way to success is by following the four values of the manifesto:
+                  <ul>
+                    <li><b>Individuals and Interactions</b> over processes and tools</li>
+                    <li><b>Working Software</b> over comprehensive documentation</li>
+                    <li><b>Customer Collaboration</b> over contract negotiation</li>
+                    <li><b>Responding to Change</b> over following a plan</li>
+                  </ul>
+              </p>
+          </div>
+          <div class="col-md-4">
+              <img src="{{ SITEURL }}/theme/img/compass.jpg" style="width: 100%; height: auto;">
+          </div>
+      </div>
+    <!-- Accordion about Uetke -->
+    <div class="row">
+      <div class="col-12">
+          <div id="accordion">
+  <div class="card">
+    <div class="card-header" id="headingOne">
+      <h5 class="mb-0">
+        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          How do we work
+        </button>
+      </h5>
     </div>
 
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+      <div class="card-body">
+        <p class="text-justify">Many laboratories face a bottleneck when software turns into a handicap instead of a tool for performing experiments. However, few Ph.D. and postdocs have the knowledge and the time to sit down and program the tools they need to automatize tasks or to develop a proper user interface for visualizing the experiment in real-time. Leveraging from Uetke's expertise, labs around the world can cut down development times and focus into the science questions they want to answer.</p>
+                    <p class="text-justify">We work in <b>close collaboration with lab managers and with younger researchers</b>. In this way, we can fulfill the requirements for the long-term view of the group and those that arise from the daily use of the software. We have built extensive experience working in collaboration with different labs. This allowed us to understand the needs at every step of the development plan, especially how to to lay out a programming environment that will be sustainable in time. Our software is properly documented and designed in such a way that future users can expand its functionality
+    without complications.</p>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingTwo">
+      <h5 class="mb-0">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          What can we do
+        </button>
+      </h5>
+    </div>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+      <div class="card-body">
+        <p class="text-justify">Applications of our software range from controlling optical tweezers to fast acquisition of digital cameras. We have also developed solutions to control confocal microscopes for single-molecule microscopy and to perform high-speed tracking of nano-particles. There are no problems we cannot solve, <a href="https://www.uetke.com/contact">contact us</a> to discuss what the possibilities are. A common example of how software can improve the throughput of your experiment is by automation. When software is allowed to take care of repetitive tasks, researchers will have free time to do creative work.</p>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header" id="headingThree">
+      <h5 class="mb-0">
+        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Why outsourcing the development of software
+        </button>
+      </h5>
+    </div>
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+      <div class="card-body">
+        <p class="text-justify">Many labs cannot afford to have permanent staff dedicated to software development, or prioritize other aspects of their research, which need more continuous attention. Buying proprietary software in some cases can be a viable solution,  but managers have to consider also the total costs of ownership. Some programs come with a subscription-based  licensing scheme that requires to pay periodically in order to use the software. In some cases, in order to get support or updates, it is necessary to pay an extra fee. Moreover, proprietary software normally comes with little room to custom solutions.</p>
+
+                    <p class="text-justify">Outsourcing software development can solve the limitations of proprietary programs without the increase in costs that an *in-house* solution would generate. Moreover, the delivery times are shorter and the code is more consistent  thanks to a broader experience in the field. Once you get software developed by Uetke you will become part of a  broader network of scientists who are actively working on software for labs. This will allow you to share your experiences with a like-minded community.</p>
+      </div>
+    </div>
+  </div>
+          </div>
+      </div>
+    </div>
+    <!-- Courses given at Uetke -->
+    <div class="row mt-3">
+        <div class="col-md-12">
+            <h3>Our Courses</h3>
+            <p class="text-justify">The delivery of software can be complemented with <a href="https://www.uetke.com/courses">courses for researchers</a>. These courses will set both young and seasoned researchers into the fast-track of software development. If you are planning to expand the software developed by Uetke at a later stage, or you want to give users complete control over the software that was delivered, the courses provided by Uetke are ideal. Uetke is the only company that provides both software and training based on open source projects, <b>done by researchers for researchers</b></p>
+        </div>
+
+    </div>
+</div>
 {% endblock %}
