Added new images to the static files of services

--- a/template/uetke/templates/static_pages/courses_prices.html
+++ b/template/uetke/templates/static_pages/courses_prices.html
@@ -48,7 +48,7 @@
         <div class="col-md-4">
           <div class="card m-1 p-2">
             <div class="card-block">
-              <p class="lead"><i>Working with Git and documenting</i></p>
+              <p class="lead"><i>Git for Scientists</i></p>
             </div>
             <div class="card-block my-0">
               <h1><b>€350</b> <sup>1, 3</sup></h1>
