--- a/template/uetke/templates/static_pages/data_analysis.html
+++ b/template/uetke/templates/static_pages/data_analysis.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <!-- Cover -->
-  <div class="pt-5 bg-primary big-header" style="background-image: url('{{ SITEURL }}/theme/img/software-header.jpg'); background-attachment: fixed;">
+  <div class="pt-5 bg-primary big-header" style="background-image: url('{{ SITEURL }}/theme/img/analysis-header.jpg'); background-attachment: fixed;">
     <div class="mb-2 ml-5 mr-5">
        <div class="row my-md-4 pb-md-5">
             <div class="col-md-12 my-5 text-lg-left text-center align-self-center">
@@ -30,17 +30,17 @@
     <!-- Three Pillars -->
       <div class="row justify-content-between my-4 pl-md-5 pr-md-5">
         <div class="col-md-4 text-center">
-          <img src="{{ SITEURL }}/theme/img/group.svg" style="width: 75%"/>
+          <img src="{{ SITEURL }}/theme/img/handling.svg" style="width: 75%"/>
           <p class="lead mt-3">Handling</p>
           <p class="text-justify">We develop policies and tools to store data in secure and redundant locations, establishing procedures for ensuring traceability and reproducibility of the results.</p>
         </div>
         <div class="col-md-4 text-center">
-          <img src="{{ SITEURL }}/theme/img/handshake.svg" style="width: 75%"/>
+          <img src="{{ SITEURL }}/theme/img/analysis.svg" style="width: 75%"/>
           <p class="lead mt-3">Analysis</p>
           <p class="text-justify">We find the best way to extract as much information from your data as possible. We can develop new tools or implement existing platforms. From statistical tests to image analysis.</p>
         </div>
         <div class="col-md-4 text-center">
-          <img src="{{ SITEURL }}/theme/img/line-chart.svg" style="width: 75%"/>
+          <img src="{{ SITEURL }}/theme/img/visualization.svg" style="width: 75%"/>
           <p class="lead mt-3">Visualization</p>
           <p class="text-justify">Show your data in professional formats. High-quality plots and images to convey as much information as possible. From 3D figures to animations, ready to use in presentations, papers and applications.</p>
         </div>
