--- a/template/uetke/templates/static_pages/experiment-design.html
+++ b/template/uetke/templates/static_pages/experiment-design.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <!-- Cover -->
-  <div class="pt-5 bg-primary big-header" style="background-image: url('{{ SITEURL }}/theme/img/software-header.jpg'); background-attachment: fixed;">
+  <div class="pt-5 bg-primary big-header" style="background-image: url('{{ SITEURL }}/theme/img/design-header.jpg'); background-attachment: fixed;">
     <div class="mb-2 ml-5 mr-5">
        <div class="row my-md-4 pb-md-5">
             <div class="col-md-12 my-5 text-lg-left text-center align-self-center">
@@ -30,17 +30,17 @@
     <!-- Three Pillars -->
       <div class="row justify-content-between my-4 pl-md-5 pr-md-5">
         <div class="col-md-4 text-center">
-          <img src="{{ SITEURL }}/theme/img/group.svg" style="width: 75%"/>
+          <img src="{{ SITEURL }}/theme/img/integrated-circuit.svg" style="width: 75%"/>
           <p class="lead mt-3">Techniques</p>
           <p class="text-justify">We help you choose the best microscopy techniques to collect the data you need to answer your questions.</p>
         </div>
         <div class="col-md-4 text-center">
-          <img src="{{ SITEURL }}/theme/img/handshake.svg" style="width: 75%"/>
+          <img src="{{ SITEURL }}/theme/img/microscope.svg" style="width: 75%"/>
           <p class="lead mt-3">Setup</p>
           <p class="text-justify">We help you build and align a microscope right at your optical table. Leverage from our expertise.</p>
         </div>
         <div class="col-md-4 text-center">
-          <img src="{{ SITEURL }}/theme/img/line-chart.svg" style="width: 75%"/>
+          <img src="{{ SITEURL }}/theme/img/training.svg" style="width: 75%"/>
           <p class="lead mt-3">Training</p>
           <p class="text-justify">We explain to the group how to use the microscope and how to troubleshoot the most common problems.</p>
         </div>
